Change deprecated sun.misc.BASE64Encoder() to java.util.Base64.getEncoder().